# snake_game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
include/: game_end_scene.h  main_menu_scene.h  snake_scene.h
include/engine/: camera.h  char_3d.h  char_3d_constants.h  char_3d_utils.h  cube.h  engine.h  scene.h  shader.h  utils.h
include/glad/: glad.h
shaders/: simple.frag  simple.vert
src/: game_end_scene.cpp  main.cpp  main_menu_scene.cpp  snake_scene.cpp
src/engine/: char_3d.cpp  engine.cpp
src/glad/: glad.c
